--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
                             </div>
                             <div class="properties__caption">
                                 <p>User Experience</p>
-                                <h3><a href="#">Fundamental of UX for Application design</a></h3>
-                                <p>The automated process all your website tasks.</p>
+                                <h3><a href="#">Application Name</a></h3>
+                                <p>Application description.</p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
                                         <div class="rating">
@@ -191,8 +191,8 @@
                             </div>
                             <div class="properties__caption">
                                 <p>User Experience</p>
-                                <h3><a href="#">Fundamental of UX for Application design</a></h3>
-                                <p>The automated process all your website tasks.
+                                <h3><a href="#">Application Name</a></h3>
+                                <p>Application description.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -219,8 +219,8 @@
                             </div>
                             <div class="properties__caption">
                                 <p>User Experience</p>
-                                <h3><a href="#">Fundamental of UX for Application design</a></h3>
-                                <p>The automated process all your website tasks.
+                                <h3><a href="#">Application Name</a></h3>
+                                <p>Application description.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -248,8 +248,8 @@
                             </div>
                             <div class="properties__caption">
                                 <p>User Experience</p>
-                                <h3><a href="#">Fundamental of UX for Application design</a></h3>
-                                <p>The automated process all your website tasks.
+                                <h3><a href="#">Application Name</a></h3>
+                                <p>Application description.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -300,7 +300,7 @@
                             <img src="assets/img/icon/right-icon.svg" alt="">
                         </div>
                         <div class="features-caption">
-                            <p>Join people from around the world learning together.</p>
+                            <p>Join people from around the world.</p>
                         </div>
                     </div>
 
@@ -309,7 +309,7 @@
                             <img src="assets/img/icon/right-icon.svg" alt="">
                         </div>
                         <div class="features-caption">
-                            <p>Join people from around the world learning together. Some more words.</p>
+                            <p>Join people from around the world. Some more words.</p>
                         </div>
                     </div>
                 </div>
@@ -343,7 +343,7 @@
                                 <img src="assets/img/gallery/topic6.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Application 1</a></h3>
+                                        <h3><a href="#">Programming</a></h3>
                                     </div>
                                 </div>
                             </div>
