--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                                 <li><a href="">Users</a></li>
                                                  <li><a href="">Users Roles</a></li>
                                                 <!-- Button -->
-                                                <li class="button-header margin-left "><a href="#" class="btn">Join</a></li>
+                                                <li class="button-header margin-left "><a href="register.html" class="btn">Join</a></li>
                                                 <li class="button-header"><a href="login.html" class="btn btn3">Log in</a></li>
                                             </ul>
                                         </nav>
@@ -96,7 +96,7 @@
                                 <div class="hero__caption">
                                     <h1 data-animation="fadeInLeft" data-delay="0.2s">Welcome to the<br> C2E Neighborhood</h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s">Collaborate with us today!</p>
-                                    <a href="#" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Log In</a>
+                                    <a href="login.html" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Log In</a>
                                 </div>
                             </div>
                         </div>
@@ -568,7 +568,7 @@
                                 and professional goals
                             with us.</h2>
                             <p>The automated process all your website tasks.</p>
-                            <a href="#" class="btn">Join now</a>
+                            <a href="register.html" class="btn">Join now</a>
                         </div>
                     </div>
                 </div>
