--- a/register.html
+++ b/register.html
@@ -42,15 +42,11 @@
 
 <!-- Register -->
 
-<main class="login-body" data-vide-bg="assets/img/login-bg.mp4">
+    <main class="login-body">
     <!-- Login Admin -->
     <form class="form-default" action="login-bg.mp4" method="POST">
         
         <div class="login-form">
-            <!-- logo-login -->
-            <div class="logo-login">
-                <a href="index.html"><img src="assets/img/logo/loder.png" alt=""></a>
-            </div>
             <h2>Registration Here</h2>
 
             <div class="form-input">
