--- a/roles.html
+++ b/roles.html
@@ -116,42 +116,45 @@
                 </div>
             </section>
             <div class="whole-wrap">
-                <div class="container-fluid">
+                <div class="container">
                     <div class="section-top-border">
                         <h3 class="mb-30">Roles</h3>
                         <div class="progress-table-wrap">
                             <div class="progress-table">
                                 <div class="table-head">
-                                    <div class="serial">id</div>
-                                    <div class="serial">Role</div>
-                                    <div class="serial">Description</div>
-                                    <div class="serial">Neighborhood</div>
-                                    <div class="serial">Start</div>
-                                    <div class="serial">End</div>
+                                    <div class="serial col-1">id</div>
+                                    <div class="serial col-1">Role</div>
+                                    <div class="serial col-3">Description</div>
+                                    <div class="serial col-3">Neighborhood</div>
+                                    <div class="serial col-2">Start</div>
+                                    <div class="serial col-2">End</div>
                                 </div>
                                 <div class="table-row">
-                                    <div class="serial">01</div>
-                                    <div class="country">User</div>
-                                    <div class="visit">Common</div>
-                                    <div class="start"></div>
-                                    <div class="end"></div>
+                                    <div class="serial col-1">01</div>
+                                    <div class="serial col-1">Admin</div>
+                                    <div class="serial col-3">Full control</div>
+                                    <div class="serial col-3">C2E</div>
+                                    <div class="serial col-2">01-15-2020</div>
+                                    <div class="serial col-2">02-15-2020</div>
                                 </div>
                                 <div class="table-row">
-                                    <div class="serial">02</div>
-                                    <div class="country">Admin</div>
-                                    <div class="visit">Common</div>
-                                    <div class="start"></div>
-                                    <div class="end"></div>
+                                    <div class="serial col-1">02</div>
+                                    <div class="serial col-1">User</div>
+                                    <div class="serial col-3">Limited control</div>
+                                    <div class="serial col-3">C2E</div>
+                                    <div class="serial col-2">04-15-2020</div>
+                                    <div class="serial col-2">06-27-2020</div>
                                 </div>
                                 <div class="table-row">
-                                    <div class="serial">03</div>
-                                    <div class="country">Moderator</div>
-                                    <div class="visit">Common</div>
-                                    <div class="start"></div>
-                                    <div class="end"></div>
+                                    <div class="serial col-1">01</div>
+                                    <div class="serial col-1">Visitor</div>
+                                    <div class="serial col-3">No control</div>
+                                    <div class="serial col-3">None</div>
+                                    <div class="serial col-2">11-02-2021</div>
+                                    <div class="serial col-2">12-12-2022</div>
                                 </div>
                                 <div class="table-row">
-                                     <div class="ml-auto"><button type="button" class="btn btn-success">Add</button></div>
+                                    <div class="ml-auto"><button type="button" class="btn btn-success" id="add">Add</button></div>
                                 </div>
                             </div>
                         </div>
@@ -278,6 +281,12 @@
         <!-- Jquery Plugins, main Jquery -->	
         <script src="./assets/js/plugins.js"></script>
         <script src="./assets/js/main.js"></script>
+
+        <script>
+            $("#add").click(function() {
+                console.log("Add pressed");
+            })
+        </script>
 
     </body>
 </html>
