--- a/roles.html
+++ b/roles.html
@@ -136,6 +136,7 @@
                                     <div class="serial col-3">C2E</div>
                                     <div class="serial col-2">01-15-2020</div>
                                     <div class="serial col-2">02-15-2020</div>
+                                   
                                 </div>
                                 <div class="table-row">
                                     <div class="serial col-1">02</div>
@@ -154,7 +155,7 @@
                                     <div class="serial col-2">12-12-2022</div>
                                 </div>
                                 <div class="table-row">
-                                    <div class="ml-auto"><button type="button" class="btn btn-success" id="add">Add</button></div>
+                                    <div class="mx-auto p-3"><button type="button" class="btn btn-success" id="add">Add</button></div>
                                 </div>
                             </div>
                         </div>
