--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                             <ul id="navigation">                                                                                          
                                                 <li class="active" ><a href="index.html">Home</a></li>
                                                 <li><a href="">Reports</a></li>
-                                                <li><a href="">Roles</a></li>
+                                                <li><a href="roles.html">Roles</a></li>
                                                 <li><a href="#">Report Roles</a></li>
                                                 <li><a href="">Users</a></li>
                                                  <li><a href="">Users Roles</a></li>
