--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             </div>
                             <div class="features-caption">
                                 <h3>Collaborate Here</h3>
-                                <p>The automated process all your website tasks.</p>
+                                <p>Example text goes here.</p>
                             </div>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                             </div>
                             <div class="features-caption">
                                 <h3>Ask!</h3>
-                                <p>The automated process all your website tasks.</p>
+                                <p>Example text goes here.</p>
                             </div>
                         </div>
                     </div>
@@ -137,7 +137,7 @@
                             </div>
                             <div class="features-caption">
                                 <h3>Request Access</h3>
-                                <p>The automated process all your website tasks.</p>
+                                <p>Example text goes here.</p>
                             </div>
                         </div>
                     </div>
