fixed modal sizing issue

--- a/roles.html
+++ b/roles.html
@@ -187,15 +187,17 @@
                                                 <input type="text" class="form-control" id="desc-info" placeholder="Description">
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <label>Neighborhood</label>
-                                            <select class="form-control" id="neighborhood-info" placeholder="Neighborhood">
-                                                <option>Corporate Business Office (106)</option>
-                                                <option>Human Resources (101)</option>
-                                                <option>IT Division (104)</option>
-                                                <option>Comptroller (10x)</option>
-                                                <option>Property Management (107)</option>
-                                            </select>
+                                        <div class="form-row">
+                                            <div class="form-group mx-auto col-md-8">
+                                                <label>Neighborhood</label>
+                                                <select class="form-control" id="neighborhood-info" placeholder="">
+                                                    <option>Corporate Business Office (106)</option>
+                                                    <option>Human Resources (101)</option>
+                                                    <option>IT Division (104)</option>
+                                                    <option>Comptroller (10x)</option>
+                                                    <option>Property Management (107)</option>
+                                                </select>
+                                            </div>
                                         </div>
                                         <div class="form-row">
                                             <div class="form-group col-md-4 mx-auto">
