--- a/roles.html
+++ b/roles.html
@@ -189,7 +189,7 @@
                                         </div>
                                         <div class="form-row">
                                             <div class="form-group mx-auto col-md-8">
-                                                <label>Neighborhood</label>
+                                                <label for="neighborhood-info">Neighborhood</label>
                                                 <select class="form-control" id="neighborhood-info" placeholder="">
                                                     <option>Corporate Business Office (106)</option>
                                                     <option>Human Resources (101)</option>
