--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                                  <li><a href="">Users Roles</a></li>
                                                 <!-- Button -->
                                                 <li class="button-header margin-left "><a href="register.html" class="btn">Join</a></li>
-                                                <li class="button-header"><a href="login.html" class="btn btn3">Log in</a></li>
+                                                <li class="button-header"><a href="login.html" class="btn">Log in</a></li>
                                             </ul>
                                         </nav>
                                     </div>
