--- a/roles.html
+++ b/roles.html
@@ -78,7 +78,7 @@
                                                     <li><a href="">Users Roles</a></li>
                                                     <!-- Button -->
                                                     <li class="button-header margin-left "><a href="register.html" class="btn">Join</a></li>
-                                                    <li class="button-header"><a href="login.html" class="btn btn3">Log in</a></li>
+                                                    <li class="button-header"><a href="login.html" class="btn">Log in</a></li>
                                                 </ul>
                                             </nav>
                                         </div>
@@ -122,6 +122,7 @@
                 </div>
             </section>
             <div class="whole-wrap">
+                <!-- Roles Table -->
                 <div class="container">
                     <div class="section-top-border">
                         <h3 class="mb-30">Roles</h3>
@@ -170,6 +171,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- End -->
 
                 <!-- Explore Applications -->
                 <div class="topic-area section-padding40">
@@ -350,6 +352,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- End -->
 
                 <!-- Edit Role Modal -->
                 <div class="container">
@@ -412,7 +415,7 @@
                     </div>
                 </div>
             </div>
-            <!-- End Align Area -->
+            <!-- End -->
         </main>
         <footer>
             <div class="footer-wrappper footer-bg ">
