--- a/roles.html
+++ b/roles.html
@@ -395,11 +395,11 @@
                                         <div class="form-row">
                                             <div class="form-group col-md-4 mx-auto">
                                                 <label>Start Date</label>
-                                                <input type="text" class="form-control" id="start-date">
+                                                <input type="date" class="form-control" id="start-date">
                                             </div>
                                             <div class="form-group col-md-4 mx-auto">
                                                 <label>End Date</label>
-                                                <input type="text" class="form-control" id="end-date">
+                                                <input type="" class="form-control" id="end-date">
                                             </div>
                                         </div>
                                     </form>
