table mobile fix

--- a/roles.html
+++ b/roles.html
@@ -46,6 +46,7 @@
                     /* Force table to not be like tables anymore */
                     .progress-table, .table-head, tbody, .th, .td, .table-row {
                         display: block !important;
+                        max-width: 560px !important; 
                     }
 
                     /* Hide table headers (but not display: none;, for accessibility) */
