table mobile fix edit icon

--- a/roles.html
+++ b/roles.html
@@ -95,6 +95,10 @@
                     .td:nth-of-type(5):before { content: "Start";  !important}
                     .td:nth-of-type(6):before { content: "End";  !important}
                     .td:nth-of-type(7):before { content: "Edit";  !important}
+                    
+                    .edit-icon{
+                        min-width: 25px !important;
+                    }
             }
 
         </style>
